# CGoGN_3

./: CMakeLists.txt
cgogn/core/: CMakeLists.txt
cgogn/core/functions/: convert.h  identity.h  mesh_info.h
cgogn/core/functions/traversals/: vertex.h
cgogn/core/tests/: CMakeLists.txt  main.cpp
cgogn/core/tests/types/: animation_skeleton.cpp
cgogn/core/types/: cells_set.h
cgogn/core/types/animation/: animation_skeleton.cpp  animation_skeleton.h
cgogn/core/types/animation_skeleton/: animation_skeleton.cpp  animation_skeleton.h
cgogn/core/types/container/: chunk_array.h  vector.h
cgogn/core/types/incidence_graph/: incidence_graph.h
cgogn/core/types/maps/: map_base.h
cgogn/core/types/maps/chain_of_maps/: edge_traversals.hpp  orbit_traversals.hpp
cgogn/core/types/maps/cmap/: cmap2.cpp  cmap_base.h  cph3.h  graph.h
cgogn/core/types/maps/gmap/: gmap2.cpp  gmap_base.h
cgogn/core/types/triangle_soup/: triangle_soup.h
cgogn/core/ui_modules/: mesh_data.h  mesh_provider.h
cgogn/geometry/: CMakeLists.txt
cgogn/geometry/algos/: angle.h  curvature.h  distance.h  ear_triangulation.h  geodesic.h  invertion.h  laplacian.h  length.h  medial_axis.h  picking.h  registration.h
cgogn/geometry/algos/animation/: animation_skeleton_embedding_helper.h  skinning_helper.h  skinning_weight_interpolation.h
cgogn/geometry/functions/: quaternion_operations.h
cgogn/geometry/tests/: CMakeLists.txt  main.cpp
cgogn/geometry/tests/dq/: dual_quaternion_test.cpp
cgogn/geometry/tests/types/: dual_quaternion_test.cpp  keyframed_animation_test.cpp  rigid_transformation_test.cpp
cgogn/geometry/types/: dual_quaternion.h  rigid_transformation.h  vector_traits.h
cgogn/geometry/types/animation/: keyframed_animation.h
cgogn/geometry/ui_modules/: animation_skeleton_controller.h  skinning_controller.h  surface_selection.h  volume_selection.h
cgogn/io/: CMakeLists.txt
cgogn/io/fbx/: fbx_importer.cpp  fbx_importer.h
cgogn/io/graph/: graph_import.cpp  graph_import.h
cgogn/io/incidence_graph/: incidence_graph_import.cpp  incidence_graph_import.h
cgogn/io/surface/: assimp.h  surface_import.cpp
cgogn/io/ui_modules/: fbx_io.h
cgogn/io/volume/: meshb.h  tet.h  volume_import.cpp
cgogn/modeling/: CMakeLists.txt
cgogn/modeling/algos/: convex_hull.h  graph_resampling.cpp  graph_to_hex.cpp  incidenceGraph_to_hex.cpp  skeleton.h
cgogn/modeling/algos/decimation/: QEM_helper.h  SQEM_helper.h  cell_queue.h  edge_approximator.h
cgogn/modeling/algos/remeshing/: blossom_quad_remeshing.h  pliant_remeshing.h  topstoc.h
cgogn/modeling/algos/subdivision/: surface_catmull_clark.h
cgogn/modeling/apps/: CMakeLists.txt  dq_modeling.cpp
cgogn/modeling/ui_modules/: dq_modeling.h  power_shape.h  skeleton_extractor_module.h  surface_deformation.h  surface_modeling.h  tubular_mesh_module.h  volume_surface_fitting.h
cgogn/rendering/: CMakeLists.txt  mesh_render.h  volume_drawer.h
cgogn/rendering/apps/: CMakeLists.txt  simple_animation_skeleton_viewer.cpp
cgogn/rendering/apps/animation/: simple_animation_skeleton_viewer.cpp  simple_skinning_viewer.cpp  volume_skinning_viewer.cpp
cgogn/rendering/shaders/: shader_animation_skeleton_bone.cpp  shader_animation_skeleton_bone.h
cgogn/rendering/ui_modules/: animation_skeleton_render.h  volume_render.h
cgogn/simulation/algos/shallow_water/: shallow_water.h
cgogn/ui/: imgui_helpers.h
cmake/: googletest-download.cmake.in
data/meshes/off/: cylinder.off
